cmake_minimum_required(VERSION 3.9)
project(C___Projects)

set(CMAKE_CXX_STANDARD 11 CMAKE_C_COMPILER CMAKE_CXX_COMPILER CMAKE_MAKE_PROGRAM)

add_executable(C___Projects
        AdvancedTopicsI.c
        AdvancedTopicsII.c
        Arrays.c
        Class.c
        class.h
        HelloWorld.c
        MemoryManagement.c
        myLib.h
        OOP.c
        Operations.c
        OperatorOverloading.c
        Pointers.c
        STL.c
        STL2.c
        Strings.c)
